@@ -9,6 +9,14 @@ namespace QMakeBuilder
     {
         public object Build(C.ObjectFile objectFile, out bool success)
         {
+            // any source file generated by moc should not be included in the .pro file (QMake handles this)
+            string sourceFilePath = objectFile.SourceFile.AbsolutePath;
+            if (System.IO.Path.GetFileNameWithoutExtension(sourceFilePath).StartsWith(QtCommon.MocFile.Prefix))
+            {
+                success = true;
+                return null;
+            }
+
             Opus.Core.Target target = objectFile.OwningNode.Target;
 
             C.CompilerOptionCollection compilerOptions = objectFile.Options as C.CompilerOptionCollection;
@@ -25,7 +33,7 @@ namespace QMakeBuilder
 
             NodeData nodeData = new NodeData();
             nodeData.Configuration = GetQtConfiguration(target);
-            nodeData.AddVariable("SOURCES", objectFile.SourceFile.AbsolutePath);
+            nodeData.AddVariable("SOURCES", sourceFilePath);
             nodeData.AddUniqueVariable("CFLAGS", commandLineBuilder);
             nodeData.AddUniqueVariable("OBJECTS_DIR", new Opus.Core.StringArray(compilerOptions.OutputDirectoryPath));
             success = true;
